<resources>
    <string name="app_name">EcommerceConcept</string>
    <string name="ecommerce">Ecommerce \nConcept</string>
    <string name="location">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_sales">Best sales</string>
    <string name="see_more">See more</string>
    <string name="buy_now">Buy now!</string>
    <string name="filter_options">Filter options</string>
    <string name="button_done">Done</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_price">Price</string>
    <string name="filter_size">Size</string>
    <string name="choose_brand">Choose brand</string>
    <string name="choose_price">Choose price</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total</string>
    <string name="delivery">Delivery</string>
    <string name="choose_size">Choose size</string>
    <string name="my_cart">My cart</string>
    <string name="product_details">Product Details</string>
    <string name="add_address">Add address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>